[package]
name = "stava"
version = "0.6.2"
description = "CLI spell checker"
authors = ["Simon Egersand <s.egersand@gmail.com>"]
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["cli", "spelling", "terminal"]

repository = "https://github.com/simeg/stava"
homepage = "https://github.com/simeg/stava"
documentation = "https://github.com/simeg/stava/blob/master/README.md"
readme = "README.md"
license = "MIT"
edition = "2018"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]

[dependencies]
clap = { version = "2.33.3", default-features = false }
lazy_static = "1.4.0"
regex = { version = "1.5.4", default-features = false, features = ["std", "perf"] }
include_dir = "0.6.1"

[dev-dependencies]
assert_cmd = "1.0.7"
predicates = "2.0.0"
tempfile = "3.2.0"
