[package]
name = "stava"
version = "0.6.2"
description = "CLI spell checker"
authors = ["Simon Egersand <s.egersand@gmail.com>"]
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["cli", "spelling", "terminal"]

repository = "https://github.com/simeg/stava"
homepage = "https://github.com/simeg/stava"
documentation = "https://github.com/simeg/stava/blob/master/README.md"
readme = "README.md"
license = "MIT"
edition = "2021"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]

[dependencies]
clap = { version = "2.34.0", default-features = false }
lazy_static = "1.4.0"
regex = { version = "1.5.4", default-features = false, features = ["std", "perf"] }
include_dir = "0.7.2"

[dev-dependencies]
assert_cmd = "2.0.2"
predicates = "2.1.0"
tempfile = "3.2.0"
