[package]
name = "stava"
version = "0.6.2"
description = "CLI spell checker"
authors = ["Simon Egersand <s.egersand@gmail.com>"]
categories = ["command-line-interface", "command-line-utilities"]
keywords = ["cli", "spelling", "terminal"]

repository = "https://github.com/simeg/stava"
homepage = "https://github.com/simeg/stava"
documentation = "https://github.com/simeg/stava/blob/master/README.md"
readme = "README.md"
license = "MIT"
edition = "2021"
include = [
	"src/**/*",
	"Cargo.toml",
	"README.md"
]

[dependencies]
clap = { version = "3.1.6", default-features = false, features = ["std", "cargo"] }
lazy_static = "1.4.0"
regex = { version = "1.5.5", default-features = false, features = ["std", "perf"] }
include_dir = "0.7.2"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
tempfile = "3.3.0"
